fixing icon alignment while docking

--- a/src/components/menu.scss
+++ b/src/components/menu.scss
@@ -28,6 +28,15 @@
   width: 1.25rem;
 }
 
+.menu-item-icon {
+  height: 20px;
+  width: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 2px 0 6px;
+}
+
 .menu-item {
   align-items: center;
   color: var(--fore-color);
@@ -80,6 +89,11 @@
       margin-right: auto;
       transform: rotate(180deg);
     }
+
+    .menu-item-icon {
+      order: 3;
+      margin: 0 6px 0 2px;
+    }
   }
 
   &.disable {
@@ -112,13 +126,4 @@
   display: block;
   margin-top: 6px;
   margin-bottom: 6px;
-}
-
-.menu-item-icon {
-  height: 20px;
-  width: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 2px 0 6px;
 }
